button and input added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>16x16 Grid of Squares</title>
+    <title>Etch a Sketch</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+
+
+    <div class="background-button">
+        <button class="button">
+          EMERGENCY
+        </button>
+    </div>
+      
+
     <div id="grid-container"></div>
 
 
 
-    
+
 
     <script src="etch.js"></script>
   </body>
