--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div class="background-button">
         <button class="button">
-          EMERGENCY
+          CREATE
         </button>
     </div>
       
